--- a/FlowCrypt/src/main/res/values/strings_dev_settings.xml
+++ b/FlowCrypt/src/main/res/values/strings_dev_settings.xml
@@ -17,6 +17,7 @@
     <string name="pref_key_node_http_log_level">pref_key_node_http_log_level</string>
     <string name="pref_key_is_native_node_debug_enabled">pref_key_is_native_node_debug_enabled</string>
     <string name="pref_key_is_detect_memory_leak_enabled">pref_key_is_detect_memory_leak_enabled</string>
+    <string name="pref_key_is_acra_enabled">pref_key_is_acra_enabled</string>
 
     <!-- Strings related to Settings -->
     <string name="pref_title_general">General</string>
@@ -38,4 +39,5 @@
     <string name="pref_title_node_http">Node HTTP</string>
     <string name="pref_title_native_node_logs">Native Node logs</string>
     <string name="pref_title_detect_memory_leaks">Detect memory leaks</string>
+    <string name="pref_title_acra">Application Crash Reports</string>
 </resources>
