--- a/FlowCrypt/src/main/res/xml/dev_preferences.xml
+++ b/FlowCrypt/src/main/res/xml/dev_preferences.xml
@@ -15,6 +15,13 @@
         </androidx.preference.Preference>
 
         <androidx.preference.SwitchPreference
+            android:defaultValue="@string/gradle_is_acra_enabled"
+            android:key="@string/pref_key_is_acra_enabled"
+            android:summaryOff="@string/pref_summary_disabled"
+            android:summaryOn="@string/pref_summary_enabled"
+            android:title="@string/pref_title_acra" />
+
+        <androidx.preference.SwitchPreference
             android:defaultValue="false"
             android:key="@string/pref_key_is_detect_memory_leak_enabled"
             android:summaryOff="@string/pref_summary_disabled"
