--- a/FlowCrypt/src/main/res/xml/preferences_notifications_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_notifications_settings.xml
@@ -2,17 +2,17 @@
   ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
   ~ Contributors: DenBond7
   -->
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.preference.ListPreference
+    <ListPreference
         android:defaultValue="encrypted_messages_only"
         android:dialogTitle="@string/receive_notifications_for"
         android:key="@string/preferences_key_messages_notification_filter"
         android:title="@string/notification_level"
         app:iconSpaceReserved="false" />
 
-    <androidx.preference.Preference
+    <Preference
         android:key="@string/preferences_key_manage_notifications"
         android:title="@string/manage_notifications"
         app:iconSpaceReserved="false" />
-</androidx.preference.PreferenceScreen>
+</PreferenceScreen>
