--- a/FlowCrypt/src/main/res/layout/activity_select_contact.xml
+++ b/FlowCrypt/src/main/res/layout/activity_select_contact.xml
@@ -28,8 +28,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include" />
 
-    <ListView
-        android:id="@+id/listViewContacts"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewContacts"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
