--- a/FlowCrypt/src/main/res/layout/contact_item.xml
+++ b/FlowCrypt/src/main/res/layout/contact_item.xml
@@ -7,8 +7,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:descendantFocusability="blocksDescendants"
+    android:focusable="true"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.Guideline
@@ -85,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin_content_small"
         android:layout_marginEnd="@dimen/default_margin_content_small"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/delete"
         android:focusable="false"
         android:focusableInTouchMode="false"
