--- a/FlowCrypt/src/main/res/layout/fragment_contacts_list.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_contacts_list.xml
@@ -18,8 +18,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/listViewContacts"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewContacts"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
