--- a/FlowCrypt/src/main/res/layout/fragment_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_create_message.xml
@@ -243,6 +243,17 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <ImageButton
+                android:id="@+id/iBShowQuotedText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin_small"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/show_more"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_more_horiz_black_24dp"
+                tools:visibility="visible" />
+
             <LinearLayout
                 android:id="@+id/layoutAtts"
                 android:layout_width="match_parent"
