--- a/FlowCrypt/src/main/res/layout/content_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/content_create_message.xml
@@ -6,7 +6,7 @@
 <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/composeFragment"
+    android:id="@+id/createMessageFragment"
     android:name="com.flowcrypt.email.ui.activity.fragment.base.CreateMessageFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
