--- a/FlowCrypt/src/main/res/layout/activity_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/activity_message_details.xml
@@ -4,6 +4,7 @@
   -->
 
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +12,12 @@
 
     <include layout="@layout/toolbar" />
 
-    <include layout="@layout/content_message_details" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/messageDetailsFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.MessageDetailsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:layout="@layout/fragment_message_details" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
