--- a/FlowCrypt/src/main/res/layout/activity_search_messages.xml
+++ b/FlowCrypt/src/main/res/layout/activity_search_messages.xml
@@ -24,6 +24,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_email_manager" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/emailListFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.EmailListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:layout="@layout/fragment_email_list" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
