--- a/FlowCrypt/src/main/res/menu/activity_email_manager.xml
+++ b/FlowCrypt/src/main/res/menu/activity_email_manager.xml
@@ -35,6 +35,6 @@
         android:icon="@drawable/selector_ic_force_sending"
         android:menuCategory="system"
         android:orderInCategory="1"
-        android:title="@string/reload_sending"
+        android:title="@string/restart_sending"
         app:showAsAction="always" />
 </menu>
