--- a/FlowCrypt/src/main/res/menu/activity_email_manager.xml
+++ b/FlowCrypt/src/main/res/menu/activity_email_manager.xml
@@ -4,7 +4,8 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/menuActionHelp"
         android:icon="@drawable/ic_help_white_24dp"
@@ -21,6 +22,16 @@
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
+        android:id="@+id/menuEmptyTrash"
+        android:icon="@drawable/ic_delete_forever_white_24dp"
+        android:menuCategory="system"
+        android:orderInCategory="3"
+        android:title="@string/empty_trash"
+        android:visible="false"
+        app:showAsAction="ifRoom"
+        tools:visible="true" />
 
     <item
         android:id="@+id/menuSwitch"
