--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -15,6 +15,7 @@
     <item name="syns_request_code_load_atts_info" type="id" />
     <item name="syns_request_move_message_to_inbox" type="id" />
     <item name="syns_request_send_encrypted_message" type="id" />
+    <item name="syns_request_empty_trash" type="id" />
     <item name="syns_load_private_keys" type="id" />
     <item name="syns_send_backup_with_private_key_to_key_owner" type="id" />
     <item name="syns_identify_encrypted_messages" type="id" />
