--- a/FlowCrypt/src/main/res/menu/fragment_pub_key_details.xml
+++ b/FlowCrypt/src/main/res/menu/fragment_pub_key_details.xml
@@ -31,4 +31,11 @@
         android:orderInCategory="2002"
         android:title="@string/delete"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menuActionEdit"
+        android:menuCategory="system"
+        android:orderInCategory="2003"
+        android:title="@string/edit"
+        app:showAsAction="ifRoom" />
 </menu>
