--- a/FlowCrypt/src/main/res/layout/activity_edit_pgp_contact.xml
+++ b/FlowCrypt/src/main/res/layout/activity_edit_pgp_contact.xml
@@ -91,9 +91,12 @@
                 android:id="@+id/buttonCheck"
                 style="@style/AppWidget.Button"
                 android:layout_width="0dp"
+                android:layout_height="@dimen/default_button_height"
                 android:layout_marginBottom="@dimen/default_margin_content"
+                android:enabled="false"
                 android:text="@string/check"
-                android:theme="@style/AppWidget.Button.Green"
+                android:textColor="@color/white"
+                android:theme="@style/AppWidget.Button.Green.WithDisabled"
                 app:layout_constraintBottom_toTopOf="@+id/textView"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />
@@ -123,6 +126,7 @@
                 android:id="@+id/buttonLoadFromClipboard"
                 style="@style/AppWidget.Button"
                 android:layout_width="0dp"
+                android:layout_marginBottom="@dimen/default_margin_content_big"
                 android:text="@string/load_from_clipboard"
                 android:theme="@style/AppWidget.Button.Green"
                 app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
