--- a/FlowCrypt/src/main/res/layout/fragment_update_public_key_of_contact.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_update_public_key_of_contact.xml
@@ -100,6 +100,20 @@
             app:layout_constraintTop_toBottomOf="@+id/tVCreated"
             tools:text="Modified: Nov 3, 2017" />
 
+        <TextView
+            android:id="@+id/tVWarning"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_margin_content"
+            android:textColor="@color/red"
+            android:textIsSelectable="true"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/tVModified"
+            tools:text="Warning: This key was expired on Nov 3, 2017"
+            tools:visibility="visible" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineLeft"
             android:layout_width="wrap_content"
