--- a/FlowCrypt/src/main/res/layout/fragment_update_public_key_of_contact.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_update_public_key_of_contact.xml
@@ -105,9 +105,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content"
+            android:layout_marginBottom="@dimen/default_margin_content"
             android:textColor="@color/red"
             android:textIsSelectable="true"
             android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/tVModified"
