Migrated to use SwitchMaterial instead of Switch.| #942

--- a/FlowCrypt/src/main/res/layout/action_item_switch.xml
+++ b/FlowCrypt/src/main/res/layout/action_item_switch.xml
@@ -3,7 +3,7 @@
   ~ Contributors: DenBond7
   -->
 
-<Switch xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.switchmaterial.SwitchMaterial xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/switchShowOnlyEncryptedMessages"
     android:layout_width="wrap_content"
