--- a/FlowCrypt/src/main/res/layout/pgp_show_original_message.xml
+++ b/FlowCrypt/src/main/res/layout/pgp_show_original_message.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Switch
+    <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switchShowOrigMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
