Modified CreateMessageActivityTest to use ActivityScenarioRule. Refactored code.| #934

--- a/FlowCrypt/src/main/res/layout/fragment_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_create_message.xml
@@ -83,6 +83,7 @@
             </FrameLayout>
 
             <FrameLayout
+                android:id="@+id/layoutTo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
