Fixed an error after updating Android gradle plugin to 4.1.0. (Not an ideal version)| #972

--- a/FlowCrypt/src/main/res/xml/dev_preferences.xml
+++ b/FlowCrypt/src/main/res/xml/dev_preferences.xml
@@ -11,7 +11,7 @@
         <Preference android:title="@string/crash_the_app">
             <intent
                 android:targetClass="com.flowcrypt.email"
-                android:targetPackage="@string/application_id" />
+                android:targetPackage="@string/base_application_id" />
         </Preference>
 
         <SwitchPreference
