--- a/FlowCrypt/src/main/res/xml/preferences_experimental_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_experimental_settings.xml
@@ -11,7 +11,7 @@
         app:iconSpaceReserved="false">
         <intent
             android:targetClass="com.flowcrypt.email"
-            android:targetPackage="@string/base_application_id" />
+            android:targetPackage="@string/application_id" />
     </Preference>
 
     <Preference
@@ -19,6 +19,6 @@
         app:iconSpaceReserved="false">
         <intent
             android:targetClass="com.flowcrypt.email.ui.activity.NodeTestActivity"
-            android:targetPackage="@string/base_application_id" />
+            android:targetPackage="@string/application_id" />
     </Preference>
 </PreferenceScreen>
