--- a/FlowCrypt/src/main/res/layout/activity_email_manager.xml
+++ b/FlowCrypt/src/main/res/layout/activity_email_manager.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
+            android:contentDescription="@string/create_new_message"
             android:src="@mipmap/ic_white_plus"
             app:backgroundTint="@color/colorPrimary" />
 
